# Chakra-Samples

./: .gitignore  CMakeLists.txt  README.md  build.sh
Chakra Samples/: README.md
Chakra Samples/JSRT Universal Windows Apps Hosting Samples/C#/: JsRT_UWP_Sample.sln  README.md
Chakra Samples/JSRT Universal Windows Apps Hosting Samples/C#/JsRT_UWP_Sample/: App.xaml  ChakraHost.cs  JsRT_UWP_Sample.csproj  MainPage.xaml  MainPage.xaml.cs
Chakra Samples/JSRT Universal Windows Apps Hosting Samples/C#/JsRT_UWP_Sample/Hosting/: Native.cs
Chakra Samples/JSRT Universal Windows Apps Hosting Samples/C++/: README.md
Chakra Samples/JSRT Universal Windows Apps Hosting Samples/C++/JsRT_UWP_Sample/: ChakraHost.cpp  ChakraHost.h
Chakra Samples/JSRT Win32 Hosting Samples/: README.md
Chakra Samples/JSRT Win32 Hosting Samples/Edge JSRT Samples/C#/: ChakraHostEdge.csproj  Program.cs
Chakra Samples/JSRT Win32 Hosting Samples/Edge JSRT Samples/C#/Hosting/: JavaScriptContext.cs  JavaScriptUsageException.cs  JavaScriptValue.cs  Native.cs
Chakra Samples/JSRT Win32 Hosting Samples/Edge JSRT Samples/C++/: ChakraHost.vcxproj  Profiler.h  stdafx.h
Chakra Samples/JSRT Win32 Hosting Samples/Edge JSRT Samples/VB/: ChakraHost.sln  Program.vb
Chakra Samples/JSRT Win32 Hosting Samples/Edge JSRT Samples/VB/Hosting/: JavaScriptContext.vb  JavaScriptEngineException.vb  JavaScriptRuntimeAttributes.vb  JavaScriptRuntimeVersion.vb  JavaScriptThreadServiceCallback.vb  JavaScriptValue.vb  JavaScriptValueType.vb  Native.vb
Chakra Samples/JSRT Win32 Hosting Samples/Legacy JSRT Samples/C#/: ChakraHost.csproj  ChakraHost.sln  Profiler.cs  Program.cs
Chakra Samples/JSRT Win32 Hosting Samples/Legacy JSRT Samples/C#/Hosting/: JavaScriptContext.cs  JavaScriptFatalException.cs  JavaScriptRuntime.cs  JavaScriptScriptException.cs  JavaScriptValueType.cs
Chakra Samples/JSRT Win32 Hosting Samples/Legacy JSRT Samples/C++/: ChakraHost.cpp  ChakraHost.sln  ChakraHost.vcxproj  Profiler.cpp
Chakra Samples/JSRT Win32 Hosting Samples/Legacy JSRT Samples/VB/: ChakraHost.sln  ChakraHost.vbproj  Program.vb
Chakra Samples/JSRT Win32 Hosting Samples/Legacy JSRT Samples/VB/Hosting/: JavaScriptContext.vb  JavaScriptErrorCode.vb  JavaScriptRuntime.vb  JavaScriptScriptException.vb  Native.vb
Chakra Samples/JSRT Win32 Hosting Samples/Legacy JSRT Samples/VB/My Project/: AssemblyInfo.vb
ChakraCore Samples/: README.md
ChakraCore Samples/CrossPlatform/: Makefile  README.md  sample.cpp
ChakraCore Samples/Hello World/C#/: HelloWorld.sln  README.md
ChakraCore Samples/Hello World/C#/HelloWorld/: HelloWorld.cs  HelloWorld.csproj
ChakraCore Samples/Hello World/C#/HelloWorld/Hosting/: JavaScriptValue.cs
ChakraCore Samples/Hello World/C++/: README.md
ChakraCore Samples/Hello World/C++/HelloWorld/: HelloWorld.cpp  HelloWorld.vcxproj  HelloWorld.vcxproj.filters
ChakraCore Samples/Hello World/CMake/: CMakeLists.txt  ChakraCoreEmbed.cmake  README.md
ChakraCore Samples/Hello World/Linux_OSX/: CMakeLists.txt  Makefile  README.md  sample.cpp
ChakraCore Samples/Hello World/Linux_OSX_Shared/: Makefile  README.md  sample.cpp
ChakraCore Samples/Hello World/Python/: README.md  helloWorld.py
ChakraCore Samples/Hello World/Windows/C#/: README.md
ChakraCore Samples/Hello World/Windows/C++/: HelloWorld.sln  README.md
ChakraCore Samples/JSRT Hosting Samples/C#/: ChakraCoreHost.sln  README.md
ChakraCore Samples/JSRT Hosting Samples/C#/ChakraCoreHost/: ChakraCoreHost.cs  ChakraCoreHost.csproj
ChakraCore Samples/JSRT Hosting Samples/C#/ChakraCoreHost/Hosting/: JavaScriptSourceContext.cs  (+1 more)
ChakraCore Samples/JSRT Hosting Samples/C++/: ChakraCoreHost.sln  README.md
ChakraCore Samples/JSRT Hosting Samples/C++/ChakraCoreHost/: ChakraCoreHost.cpp  ChakraCoreHost.vcxproj  ChakraCoreHost.vcxproj.filters  stdafx.h
ChakraCore Samples/OpenGL Engine/: CMakeLists.txt  CustomAPI.md  OpenGLEngine.sln  README.md  layout.md
ChakraCore Samples/OpenGL Engine/OpenGLEngine/: Canvas.cpp  Canvas.h  ChakraCoreHost.cpp  ChakraCoreHost.h  OpenGLEngine.vcxproj  OpenGLEngine.vcxproj.filters  Shape.cpp  Shape.h  Task.cpp  Task.h  app.js  main.cpp
ChakraCore Samples/OpenGL Engine/OpenGLEngine/dep/glfw-3.1.2/glfw-3.1.2.bin.WIN32/lib-vc2012/: glfw3.lib  glfw3dll.lib
ChakraCore Samples/OpenGL Engine/OpenGLEngine/dep/glfw-3.1.2/glfw-3.1.2.bin.WIN32/lib-vc2013/: glfw3.lib  glfw3dll.lib
ChakraCore Samples/OpenGL Engine/OpenGLEngine/dep/glfw-3.1.2/glfw-3.1.2.bin.WIN64/lib-vc2012/: glfw3.lib  glfw3dll.lib
ChakraCore Samples/OpenGL Engine/OpenGLEngine/dep/glfw-3.1.2/glfw-3.1.2.bin.WIN64/lib-vc2013/: glfw3.lib  glfw3dll.lib
JavaScript Runtime Sample/: JsRT_UWP_Sample.sln  README.md
JavaScript Runtime Sample/JsRT_UWP_Sample/: App.xaml  App.xaml.h  MainPage.xaml.cpp  Package.appxmanifest
JavaScript Runtime Samples/: README.md
JavaScript Runtime Samples/JSRT Universal Windows Apps Hosting Samples/C#/: JsRT_UWP_Sample.sln  README.md
JavaScript Runtime Samples/JSRT Universal Windows Apps Hosting Samples/C#/JsRT_UWP_Sample/: App.xaml.cs  ChakraHost.cs  JsRT_UWP_Sample.csproj  MainPage.xaml.cs  Package.appxmanifest
JavaScript Runtime Samples/JSRT Universal Windows Apps Hosting Samples/C++/JsRT_UWP_Sample/: App.xaml.cpp  ChakraHost.cpp  ChakraHost.h  JsRT_UWP_Sample.vcxproj  JsRT_UWP_Sample.vcxproj.filters  MainPage.xaml  MainPage.xaml.h
JavaScript Runtime Samples/JSRT Win32 Hosting Samples/: README.md
JavaScript Runtime Samples/JSRT Win32 Hosting Samples/Edge JSRT Samples/C#/: ChakraHost.sln
JavaScript Runtime Samples/JSRT Win32 Hosting Samples/Edge JSRT Samples/C++/: ChakraHost.cpp  ChakraHost.vcxproj
JavaScript Runtime Samples/JSRT Win32 Hosting Samples/Edge JSRT Samples/VB/: ChakraHostEdge.vbproj
JavaScript Runtime Samples/JSRT Win32 Hosting Samples/Legacy JSRT Samples/C++/: ChakraHost.vcxproj.filters  stdafx.h
JavaScript Runtime Samples/JSRT Win32 Hosting Samples/Legacy JSRT Samples/VB/: Profiler.vb
qtwrapper/: README.md  main.cpp  qtobject.cpp  qtobject.h  qtwrapper.pro
qtwrapper/qtwrapper/: qjsengine.cpp  qjsengine.h
(+32 files in other folders)
